--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
+    <%- style %> 
 </head>
 
 <body>
@@ -15,6 +16,8 @@
     <%- body %>
 
     <%- include('_footer') %>
+    
+    <%- script %> 
 </body>
 
-</html>
+</html> 
