--- a/views/users_profile.ejs
+++ b/views/users_profile.ejs
@@ -1,4 +1,10 @@
 <link rel="stylesheet" href="/css/users_profile.css">
+
 <h1>
     Profile Page
 </h1>
+
+
+    <p><%= user.name %> </p> 
+    <p><%= user.email %> </p> 
+
