add sign out routes and actions

--- a/views/users_profile.ejs
+++ b/views/users_profile.ejs
@@ -1,5 +1,9 @@
 <link rel="stylesheet" href="/css/users_profile.css">
 
+<form action="/users/delete-session" method="post">
+    <input type="submit" value="Sign Out">
+</form>
+
 <h1>
     Profile Page
 </h1>
@@ -7,4 +11,6 @@
 
     <p><%= user.name %> </p> 
     <p><%= user.email %> </p> 
+
+
 
