--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,17 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
-    <%- style %> 
+    <link rel="stylesheet" type="text/css" href="/css/header.css">
+    <link rel="stylesheet" type="text/css" href="/css/footer.css">
+
+
+    <%- style %>
 </head>
 
 <body>
     <%- include('_header') %>
 
-    <%- body %>
+    <main id="layout-main">
+        <%- body %>
+    </main>
 
     <%- include('_footer') %>
-    
-    <%- script %> 
+
+    <%- script %>
 </body>
 
-</html> 
+</html>
