--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 
     #layout-main {
         height: 100%;
