--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,26 +1,32 @@
-<header>
-    <h2>CODEIAL</h2>
-
-    <ul>
-        <% if (locals.user){ %>
-        <li>
-            <a href="/users/profile"> 
-                <%= user.name %> 
-            </a>
-        </li>
-
-        <li>
-            <a href="/users/sign-out">Sign Out</a>
-        </li>
-
-        <% } else { %>
-        <li>
-            <a href="/users/sign-in">Sign In</a>
-        </li>
-
-        <li>
-            <a href="/users/sign-up">Sign Out</a>
-        </li>
-        <% } %>
-    </ul>
-</header>
+<header id="layout-header">
+    <nav>
+        <div class="mini-logo">
+            <p>
+                <a href='/'>
+                    CODEIAL
+                </a>
+            </p>
+        </div>
+    
+        <div class="auth-links">
+            <ul>
+                <% if (locals.user){ %>
+                <li>
+                    <a href="/users/profile"><%= user.name %></a>
+                </li>
+                <li>
+                    <a href="/users/sign-out">Sign Out</a>
+                </li>
+                <% }else{ %>
+                <li>
+                    <a href="/users/sign-in">Sign In</a>
+                </li>
+                <li>
+                    <a href="/users/sign-in">Sign Up</a>
+                </li>
+        
+                <% } %>
+            </ul>
+        </div>
+    </nav>
+ </header>
