--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -6,6 +6,7 @@
         align-items: center;
         // background: #2196f3;
         background: #836efc;
+        // background:#b491fc;
         color: white;
         height: 50px;
         box-shadow: 1px 1px 1px 1px lightgrey;
@@ -15,6 +16,7 @@
                 margin: 5px;
                 font-size: 1.6rem;
                 font-weight: bold;
+                
             }
         }
 
