--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -3,7 +3,7 @@
         <div class="mini-logo">
             <p>
                 <a href='/'>
-                    CODEIAL
+                    <i class="fas fa-ghost"></i> CODEIAL
                 </a>
             </p>
         </div>
