--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -4,22 +4,25 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
-    href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab:wght@400;700&family=Rubik:wght@300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-<div id="sign-in-ctn">
+    href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab:wght@400;700&family=Rubik:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+
+
+
+    <div id="sign-in-ctn">
     <p id="app-title"><i class="fas fa-ghost"></i> ghost<i class="fas fa-circle"></i></p>
     <h1>Sign In</h1>
 
     <div id="sign-in-form">
         <form action="/users/create-session" method="post">
-            <label for="email">Email Address</label>
+            <label for="email">Email Address or Username</label>
             <input type="email" id="email" name="email" required>
-            <label for="password">Password</label>
+            <label for="password">Password <span id="frgt"> <a href="#">Forgot Password? </a> </span></label>
             <input type="password" id="password" name="password" required>
             <button type="submit">Sign In</button>
             <span><a href="/users/sign-up">No Account?<br>Sign Up</b></a></span>
         </form>
-        
+
     </div>
 
 </div>
