--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -1,9 +1,22 @@
-<h1>Sign Up</h1>
+<link rel="stylesheet" type="text/css" href="/css/user_sign_up.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+    integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+    href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab:wght@400;700&family=Rubik:wght@300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
 
-<form action="/users/create" method="post">
-    <input type="text" name="name" placeholder="Name" required>
-    <input type="email" name="email" placeholder="Email" required>
-    <input type="password" name="password" placeholder="Password" required>
-    <input type="password" name="confirm_password" placeholder="Confirm Password" required>
-    <input type="submit" value="Sign Up">
-</form> 
+<div id="sign-in-ctn">
+    <p id="app-title"><i class="fas fa-ghost"></i> ghost<i class="fas fa-circle"></i></p>
+    <h1>Sign In</h1>
+    <div id="sign-in-form">
+        <form action="/users/create" method="post">
+            <input type="text" name="name" placeholder="Name" required>
+            <input type="email" name="email" placeholder="Email" required>
+            <input type="password" name="password" placeholder="Password" required>
+            <input type="password" name="confirm_password" placeholder="Confirm Password" required>
+            <button type="submit">Sign Up</button>
+        </form>
+    </div>
+</div>
