--- a/assets/css/user_sign_up.css
+++ b/assets/css/user_sign_up.css
@@ -2,12 +2,12 @@ header {
   display: none; }
 
 #layout-footer {
-  background-color: #fed4e7;
+  background-color: #e6e6e6;
   opacity: 0.7; }
 
 body {
   display: flex;
-  background: url("../images/signin-background.png");
+  background: url("../images/cool-background.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -15,46 +15,48 @@ body {
   height: 100vh;
   font-family: "Rubik", sans-serif; }
 
-#sign-in-ctn {
+#sign-up-ctn {
   background-color: #f3eded;
   opacity: 0.95;
   height: 550px;
   max-height: 550px;
-  width: 60%;
+  width: 65%;
   border-radius: 20px;
   margin: 50px auto;
-  padding: 25px; }
-  #sign-in-ctn #app-title {
+  padding: 25px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset; }
+  #sign-up-ctn #app-title {
     color: #fa4481;
     font-size: 2rem;
     font-weight: bold;
     padding: 0;
     margin: 0;
-    margin-top: 45px;
+    margin-top: 30px;
     text-align: left;
     font-family: "Rubik", sans-serif; }
-    #sign-in-ctn #app-title .fa-circle {
+    #sign-up-ctn #app-title .fa-circle {
       margin-left: 2px;
       font-size: 5px; }
-  #sign-in-ctn h1 {
+  #sign-up-ctn h1 {
     font-family: "Rubik", sans-serif;
-    font-size: 4rem;
+    font-size: 4.5rem;
     text-align: left; }
-  #sign-in-ctn #sign-in-form {
+  #sign-up-ctn #sign-in-form {
     display: flex; }
-    #sign-in-ctn #sign-in-form form {
+    #sign-up-ctn #sign-in-form form {
       display: flex;
       flex-direction: column;
       width: 500px; }
-      #sign-in-ctn #sign-in-form form label {
+      #sign-up-ctn #sign-in-form form label {
         color: #6e6e6e;
         text-align: left;
         margin-bottom: 7px;
         margin-top: 7px; }
-        #sign-in-ctn #sign-in-form form label #frgt {
+        #sign-up-ctn #sign-in-form form label #frgt {
           text-align: right;
           margin-left: 125px; }
-      #sign-in-ctn #sign-in-form form input {
+      #sign-up-ctn #sign-in-form form input {
+        font-size: 1rem;
         text-align: left;
         padding: 12px;
         border-radius: 15px;
@@ -64,16 +66,12 @@ body {
         transition-property: border-color;
         transition-duration: 0.2s;
         max-height: 50px; }
-        #sign-in-ctn #sign-in-form form input:focus {
+        #sign-up-ctn #sign-in-form form input:focus {
           outline: none;
           border-radius: 15px;
           border-color: #3d9ceb;
           box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 8px; }
-      #sign-in-ctn #sign-in-form form input[type="email"] {
-        font-size: 1rem; }
-      #sign-in-ctn #sign-in-form form input[type="password"] {
-        font-size: 1rem; }
-      #sign-in-ctn #sign-in-form form button {
+      #sign-up-ctn #sign-in-form form button {
         display: block;
         font-size: 1.1rem;
         width: 160px;
@@ -89,17 +87,20 @@ body {
         cursor: pointer;
         transition-property: background-color;
         transition-duration: 0.2s; }
-        #sign-in-ctn #sign-in-form form button:hover {
+        #sign-up-ctn #sign-in-form form button:hover {
           background-color: #fa4481; }
-      #sign-in-ctn #sign-in-form form span {
+      #sign-up-ctn #sign-in-form form span {
         font-size: 0.88rem;
         font-family: sans-serif;
         line-height: 0.9;
-        margin-left: 70%;
-        margin-top: -35px; }
-        #sign-in-ctn #sign-in-form form span a {
+        margin-left: 64%;
+        margin-top: -30px; }
+        #sign-up-ctn #sign-in-form form span a {
           color: #3f7cf0;
-          text-decoration: none; }
+          text-decoration: none;
+          word-wrap: nowrap; }
+          #sign-up-ctn #sign-in-form form span a:hover {
+            text-decoration: underline; }
 
 .ml-20 {
   margin-left: 15px; }
