--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,7 +1,7 @@
 <footer id="layout-footer">
     <div>
         <p>
-            &#169; Codeial Pvt Ltd. All Rights Reserved
+            &#169; Ghost Pvt Ltd. All Rights Reserved
         </p>
     </div>
 
