--- a/assets/scss/user_sign_in.scss
+++ b/assets/scss/user_sign_in.scss
@@ -3,14 +3,15 @@ header {
 }
 
 #layout-footer {
-    background-color:#fed4e7;
-    opacity: 0.7;
+  background-color: #d6d6d6;
+  opacity: 0.7;
 }
 
 body {
-//   margin: 0;
+  //   margin: 0;
   display: flex;
-  background: url("../images/signin-background.png");
+  // background-color:#f1f1f1;
+  background: url("../images/cool-background.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -29,14 +30,16 @@ body {
   opacity: 0.95;
   height: 550px;
   max-height: 550px;
-  width: 60%;
+  width: 65%;
   // min-width:70%;
   border-radius: 20px;
   margin: 50px auto;
   padding: 25px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
 
   #app-title {
     color: rgb(250, 68, 129);
+    // color: #836efc;
     font-size: 2rem;
     font-weight: bold;
     padding: 0;
@@ -53,7 +56,7 @@ body {
 
   h1 {
     font-family: "Rubik", sans-serif;
-    font-size: 4rem;
+    font-size: 4.5rem;
     text-align: left;
   }
 
@@ -70,15 +73,17 @@ body {
         text-align: left;
         margin-bottom: 7px;
         margin-top: 7px;
-        #frgt{
-         
-            text-align: right;
-            margin-left: 125px;
-            
+        #frgt {
+          text-align: right;
+          margin-left: 125px;
+          &:hover {
+            text-decoration: underline;
+          }
         }
       }
 
       input {
+        font-size: 1rem;
         text-align: left;
         padding: 12px;
         border-radius: 15px;
@@ -97,16 +102,7 @@ body {
         }
       }
 
-      input[type="email"] {
-        font-size: 1rem;
-      }
-
-      input[type="password"] {
-        font-size: 1rem;
-      }
-
-      button{
-        
+      button {
         display: block;
         font-size: 1.1rem;
         width: 160px;
@@ -115,17 +111,18 @@ body {
         margin-top: 40px;
         border-radius: 15px;
         color: white;
-        background-color: #3f7cf0;
+        // background-color: #3f7cf0;
+        background-color: #836efc;
+
         opacity: 1;
         z-index: 3;
         text-align: center;
         cursor: pointer;
         transition-property: background-color;
         transition-duration: 0.2s;
-        &:hover{
-            background-color:rgb(250, 68, 129);
+        &:hover {
+          background-color: rgb(250, 68, 129);
         }
-
       }
 
       span {
@@ -134,18 +131,17 @@ body {
         font-family: sans-serif;
         line-height: 0.9;
         // float: right;
-        margin-left:70%;
+        margin-left: 67%;
         margin-top: -35px;
         // text-align: right;
         a {
           color: #3f7cf0;
           text-decoration: none;
+          &:hover {
+            text-decoration: underline;
+          }
         }
       }
     }
   }
-}
-
-.ml-20 {
-  margin-left: 15px;
 }
