--- a/assets/scss/user_sign_in.scss
+++ b/assets/scss/user_sign_in.scss
@@ -75,7 +75,7 @@ body {
         margin-top: 7px;
         #frgt {
           text-align: right;
-          margin-left: 125px;
+          margin-left: 163px;
           &:hover {
             text-decoration: underline;
           }
@@ -131,9 +131,9 @@ body {
         font-family: sans-serif;
         line-height: 0.9;
         // float: right;
-        margin-left: 67%;
+        margin-left: 71%;
         margin-top: -35px;
-        // text-align: right;
+        text-align: right;
         a {
           color: #3f7cf0;
           text-decoration: none;
