--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -10,7 +10,7 @@
 <div id="sign-up-ctn">
     <p id="app-title"><i class="fas fa-ghost"></i> ghost<i class="fas fa-circle"></i></p>
     <h1>Sign Up</h1>
-    <div id="sign-in-form">
+    <div id="sign-up-form">
         <form action="/users/create" method="post">
             <input type="text" name="name" placeholder="Name" required>
             <input type="email" name="email" placeholder="Email" required>
