--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,4 +2,10 @@
     Codeial / <%= title %>
 </h1>
 
-    
+<section id="feed-post">
+    <h4>Posts</h4>
+    <form action="" id="new-post-form" method="post">
+        <textarea name="content" rows="3" cols="30" placeholder="What's on your mind?"></textarea>
+        <input type="submit" value="Post">
+    </form>
+</section>
