--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -3,7 +3,7 @@
         <div class="mini-logo">
             <p>
                 <a href='/'>
-                    <i class="fas fa-ghost"></i> CODEIAL
+                    <i class="fas fa-ghost"></i> GHOST.
                 </a>
             </p>
         </div>
@@ -22,7 +22,7 @@
                     <a href="/users/sign-in">Sign In</a>
                 </li>
                 <li>
-                    <a href="/users/sign-in">Sign Up</a>
+                    <a href="/users/sign-up">Sign Up</a>
                 </li>
         
                 <% } %>
