--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,8 +4,20 @@
 
 <section id="feed-post">
     <h4>Posts</h4>
-    <form action="" id="new-post-form" method="post">
+    <form action="/posts/create" id="new-post-form" method="post">
         <textarea name="content" rows="3" cols="30" placeholder="What's on your mind?"></textarea>
         <input type="submit" value="Post">
     </form>
+
+    <div id="posts-list-ctn">
+        <% if (locals.user) { %>
+        <ul>
+            <% for (post of user_posts) { %>
+            <li>
+                <%= post.content %>
+            </li>
+            <% } %>
+        </ul>
+        <% } %>
+    </div>
 </section>
