--- a/assets/css/user_sign_in.css
+++ b/assets/css/user_sign_in.css
@@ -12,12 +12,11 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   overflow: hidden;
-  height: 100vh;
+  height: 70vh;
   font-family: "Rubik", sans-serif; }
 
 #sign-in-ctn {
   background-color: #f3eded;
-  opacity: 0.95;
   height: 550px;
   max-height: 550px;
   width: 65%;
@@ -83,12 +82,11 @@ body {
         border-radius: 15px;
         color: white;
         background-color: #836efc;
-        opacity: 1;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
         z-index: 3;
         text-align: center;
         cursor: pointer;
-        transition-property: background-color;
-        transition-duration: 0.2s; }
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; }
         #sign-in-ctn #sign-in-form form button:hover {
           background-color: #fa4481; }
       #sign-in-ctn #sign-in-form form span {
