--- a/assets/scss/user_sign_up.scss
+++ b/assets/scss/user_sign_up.scss
@@ -27,7 +27,7 @@ body {
   // display: flex;
   // flex-direction: column;
   background-color: rgb(243, 237, 237);
-  opacity: 0.95;
+  // opacity: 0.95;
   height: 550px;
   max-height: 550px;
   width: 65%;
@@ -114,8 +114,8 @@ body {
         z-index: 3;
         text-align: center;
         cursor: pointer;
-        transition-property: background-color;
-        transition-duration: 0.2s;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
         &:hover {
           background-color: rgb(250, 68, 129);
         }
