--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,11 @@
         <ul>
             <% for (post of user_posts) { %>
             <li>
-                <%= post.content %>
+                <p>
+                    <%= post.content %>
+                    <br>
+                    <small><%= post.user.name %> </small>
+                </p>
             </li>
             <% } %>
         </ul>
