--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -3,8 +3,10 @@
     integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link
-    href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab:wght@400;700&family=Rubik:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab:wght@400;700&family=Rubik:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+
+
 
 
 
@@ -19,7 +21,7 @@
             <input type="email" id="email" name="email" required>
             <label for="password">Password <span id="frgt"> <a href="#">Forgot Password? </a> </span></label>
             <input type="password" id="password" name="password" required>
-            <button type="submit">Sign In</button>
+            <button type="submit" variant="contained">Sign In</button>
             <span><a href="/users/sign-up">No Account? <br>Sign Up</b></a></span>
         </form>
         
