--- a/assets/css/user_sign_in.css
+++ b/assets/css/user_sign_in.css
@@ -62,7 +62,7 @@ body {
         padding: 12px;
         border-radius: 15px;
         margin-top: 5px;
-        border: 2px solid #cfcfcf;
+        border: 2.5px solid #cfcfcf;
         box-shadow: none;
         transition-property: border-color;
         transition-duration: 0.2s;
@@ -70,7 +70,7 @@ body {
         #sign-in-ctn #sign-in-form form input:focus {
           outline: none;
           border-radius: 15px;
-          border-color: #3d9ceb;
+          border-color: rgba(250, 68, 129, 0.8);
           box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 8px; }
       #sign-in-ctn #sign-in-form form button {
         display: block;
@@ -92,10 +92,9 @@ body {
       #sign-in-ctn #sign-in-form form span {
         font-size: 0.88rem;
         font-family: sans-serif;
-        line-height: 0.9;
-        margin-left: 71%;
-        margin-top: -35px;
-        text-align: right; }
+        line-height: 1;
+        margin-left: 75%;
+        margin-top: -35px; }
         #sign-in-ctn #sign-in-form form span a {
           color: #3f7cf0;
           text-decoration: none; }
