--- a/assets/scss/user_sign_in.scss
+++ b/assets/scss/user_sign_in.scss
@@ -2,10 +2,15 @@ header {
   display: none;
 }
 
+
 #layout-footer {
   background-color: #d6d6d6;
   opacity: 0.7;
+  position: fixed;
+  display: flex;
+  width: 100%;
 }
+
 
 body {
   //   margin: 0;
@@ -17,11 +22,11 @@ body {
   background-repeat: no-repeat;
   overflow: hidden;
   // width: 50%;
-  height: 70vh;
+  height: 100vh;
   font-family: "Rubik", sans-serif;
-
   // position: relative;
 }
+
 
 #sign-in-ctn {
   // display: flex;
