--- a/assets/css/user_sign_up.css
+++ b/assets/css/user_sign_up.css
@@ -2,8 +2,11 @@ header {
   display: none; }
 
 #layout-footer {
-  background-color: #e6e6e6;
-  opacity: 0.7; }
+  background-color: #d6d6d6;
+  opacity: 0.7;
+  position: fixed;
+  display: flex;
+  width: 100%; }
 
 body {
   display: flex;
