--- a/assets/css/user_sign_in.css
+++ b/assets/css/user_sign_in.css
@@ -3,7 +3,10 @@ header {
 
 #layout-footer {
   background-color: #d6d6d6;
-  opacity: 0.7; }
+  opacity: 0.7;
+  position: fixed;
+  display: flex;
+  width: 100%; }
 
 body {
   display: flex;
@@ -12,7 +15,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   overflow: hidden;
-  height: 70vh;
+  height: 100vh;
   font-family: "Rubik", sans-serif; }
 
 #sign-in-ctn {
