--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,13 +1,14 @@
 #layout-footer {
   font-size: 0.88rem;
-  position: relative;
+  display: flex;
+  position: fixed;
+  width: 100%;
   padding: 5px 15px;
   bottom: 0;
   left: 0;
   background: #dddada;
   justify-content: flex-start;
-  height: 100%;
-  text-align: left; }
+  height: 60px; }
   #layout-footer a {
     color: black;
     text-decoration: none;
