--- a/assets/css/user_sign_up.css
+++ b/assets/css/user_sign_up.css
@@ -2,11 +2,8 @@ header {
   display: none; }
 
 #layout-footer {
-  background-color: #d6d6d6;
-  opacity: 0.7;
-  position: fixed;
-  display: flex;
-  width: 100%; }
+  background-color: #e6e6e6;
+  opacity: 0.7; }
 
 body {
   display: flex;
