--- a/assets/scss/user_sign_in.scss
+++ b/assets/scss/user_sign_in.scss
@@ -31,7 +31,8 @@ body {
 #sign-in-ctn {
   // display: flex;
   // flex-direction: column;
-  background-color: rgb(243, 237, 237);
+  background-color: rgb(243, 237, 237); //#f3ededf5
+  
   // opacity: 0.95;
   height: 550px;
   max-height: 550px;
