--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,14 +1,13 @@
 #layout-footer {
   font-size: 0.88rem;
-  display: flex;
-  position: fixed;
   width: 100%;
+  position: relative;
   padding: 5px 15px;
   bottom: 0;
   left: 0;
   background: #dddada;
   justify-content: flex-start;
-  height: 60px; }
+  text-align: left; }
   #layout-footer a {
     color: black;
     text-decoration: none;
