--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -2,14 +2,14 @@
     font-size: 0.88rem;
     // display: flex;
     // position: fixed;
-    // width: 100%;
+    width: 100%;
     position: relative;
     padding: 5px 15px;
     bottom: 0;
     left: 0;
     background: rgb(221, 218, 218);
     justify-content: flex-start;
-    height: 100%;
+    // height: 100%;
     // padding-bottom: 50px;
     text-align: left;
 
