Add delete comment routes and actions

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -48,6 +48,12 @@
                                 <% for(comment of post.comments) { %>
                                     
                                     <p>
+                                        <% if((locals.user) && (locals.user.id == comment.user.id)) { %> 
+                                            <small>
+                                                <a href="/comments/destroy/<%= comment.id %> "><i class="far fa-trash-alt"></i></a>
+                                            </small>
+                                        <% } %>
+
                                         <%= comment.content %> 
                                         <br>
                                         <small>
