--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,75 +1,41 @@
-<h1>
-    Codeial / <%= title %>
-</h1>
+<link rel="stylesheet" type="text/css" href="/css/home.css">
 
-<section id="feed-post">
 
-    <h4>Posts</h4>
+<div id="home-container">
+    <section id="feed-post">
 
-    <% if (locals.user) { %>
-    <form action="/posts/create" id="new-post-form" method="post">
-        <textarea name="content" rows="3" cols="30" placeholder="What's on your mind, <%= locals.user.name %> " required></textarea>
-        <input type="submit" value="Post">
-    </form>
-    <% } %>
-
-    <div id="posts-list-container">
-
-        <ul>
-
-            <% for (post of user_posts) { %>
-                <li>
-                <!--posts-->
-                <p>
-                    <% if((locals.user) && (locals.user.id == post.user.id)) { %> 
-                        <small>
-                            <a href="/posts/destroy/<%= post.id %> "><i class="far fa-trash-alt"></i></a>
-                        </small>
-                    <% } %>     
-                    <%= post.content %>
-                    <br>
-
-                    <small><%= post.user.name %> </small>
-                </p>
-
-                <!--comments form-->
-                    <div class="post-comments">
-
-                        <% if(locals.user) { %>
-                            <form action="/comments/create" method="POST">
-                                <input type="text" name="content" placeholder="Type Here..." required>
-                                <input type="hidden" name="post" value="<%= post._id %>">
-                                <input type="submit" value="Add Comment">
-                            </form>
-                        <% } %>
-
-                        <div class="post-comments-list">
-                            <ul id="post-comments-<%= post._id %> ">
-                                <% for(comment of post.comments) { %>
-                                    
-                                    <p>
-                                        <% if((locals.user) && (locals.user.id == comment.user.id)) { %> 
-                                            <small>
-                                                <a href="/comments/destroy/<%= comment.id %> "><i class="far fa-trash-alt"></i></a>
-                                            </small>
-                                        <% } %>
-
-                                        <%= comment.content %> 
-                                        <br>
-                                        <small>
-                                            <%= comment.user.name %> 
-                                        </small>
-                                    </p>
-                                    
-                                <% } %>   
-                            </ul>
-                        </div>
-
-                    </div>
-                </li>
-            <% } %>
-
-        </ul>
-
-    </div>
-</section>
+        <h4>Posts</h4>
+    
+        <% if (locals.user) { %>
+            <form action="/posts/create" id="new-post-form" method="post">
+                <textarea name="content" rows="3" cols="30" placeholder="What's on your mind, <%= locals.user.name %> " required></textarea>
+                <input type="submit" value="Post">
+            </form>
+        <% } %>
+    
+        <div id="posts-list-container">
+    
+            <ul>
+    
+                <% for (post of user_posts) { %>
+                    <%- include('_post') -%> 
+                <% } %>
+            
+            </ul>
+            
+        </div>  
+    </section>
+    
+    <section id="user-friends">
+    
+        <h4>Friends</h4>
+    
+        <% for(u of all_users) { %>
+            <p>
+                <a href="/users/profile/<%= u.id %>"><%= u.name %></a>
+            </p>
+        <% } %>  
+        
+    
+    </section>
+</div>
