--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title> <%= title %></title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
     <link rel="stylesheet" type="text/css" href="/css/header.css">
     <link rel="stylesheet" type="text/css" href="/css/footer.css">
@@ -24,12 +26,14 @@
 
     <%- include('_header') %>
 
-    <% if(flash.success && flash.success.length > 0)  { %> 
+    
+    <!-- <% if(flash.success && flash.success.length > 0)  { %> 
         <h5>
             <%= flash.success %> 
         </h5>    
-    <% } %>     
-
+    <% } %>      
+    -->
+    
     <main id="layout-main">
         <%- body %>
     </main>
@@ -37,6 +41,17 @@
     <%- include('_footer') %>
 
     <%- script %>
+
+    <script>
+        <% if(flash.success && flash.success.length > 0) { %>
+            new Noty({theme: 'relax',
+            text: '<%= flash.success%>',
+            type: 'success',
+            layout: 'topRight',
+            timeout: 1500
+        }).show();
+        <% } %>
+    </script>
 </body>
 
 </html>
