--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,6 +9,7 @@
     <title> <%= title %></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
     <link rel="stylesheet" type="text/css" href="/css/header.css">
     <link rel="stylesheet" type="text/css" href="/css/footer.css">
@@ -44,9 +45,18 @@
 
     <script>
         <% if(flash.success && flash.success.length > 0) { %>
-            new Noty({theme: 'relax',
+            new Noty({theme: 'sunset',
             text: '<%= flash.success%>',
             type: 'success',
+            layout: 'topRight',
+            timeout: 1500
+        }).show();
+        <% } %>
+
+        <% if(flash.error && flash.error.length > 0) { %>
+            new Noty({theme: 'sunset',
+            text: '<%= flash.error%>',
+            type: 'error',
             layout: 'topRight',
             timeout: 1500
         }).show();
