--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,9 +1,9 @@
-<li>
+<li id="post-<%= post._id %>">
     <!--posts-->
     <p>
         <% if((locals.user) && (locals.user.id == post.user.id)) { %> 
             <small>
-                <a href="/posts/destroy/<%= post.id %> "><i class="far fa-trash-alt"></i></a>
+                <a  class="delete-post-button" href="/posts/destroy/<%= post.id %> "><i class="far fa-trash-alt"></i></a>
             </small>
         <% } %>     
         <%= post.content %>
